New theme + cleanup

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 :root {
-    --bg-color: #181825;
-    --terminal-bg-color: #1e1e2e;
+    --terminal-bg-color: #191919;
+    --bg-color: #161617;
     --link-color: #cdd6f4;
     --directory-color: #94e2d5;
     --line-color: #45475a;
